[package]
name = "push2talk"
version = "1.0.0"
edition = "2021"
authors = ["Cyril Levis", "Maxim Baz"]
categories = ["gui", "audio"]
keywords = ["linux", "desktop-application", "pulseaudio", "wayland", "x11", "ptt", "push2talk"]
description = "This Push to talk application is working with both wayland/x11 and pulseaudio (pipewire)."
readme = "README.md"
license = "ISC"
homepage = "https://github.com/cyrinux/push2talk"
repository = "https://github.com/cyrinux/push2talk"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
pulsectl-rs = { git = "https://github.com/cyrinux/pulsectl-rs", branch="main"}
rdev = { git = "https://github.com/cyrinux/rdev", branch="main", default-features = false, features = ["evdev-rs", "unstable_grab"] }
signal-hook = "0.3.17"
strum = "0.25.0"
strum_macros = "0.25.3"
