[package]
name = "push2talk"
version = "1.3.1"
edition = "2021"
authors = ["Cyril Levis", "Maxim Baz"]
categories = ["gui", "multimedia::audio"]
keywords = ["linux", "desktop-application", "pulseaudio", "pipewire", "privacy"]
description = "This Push to talk application is working with both wayland/x11 and pulseaudio (pipewire)."
readme = "README.md"
license = "ISC"
homepage = "https://github.com/cyrinux/push2talk"
repository = "https://github.com/cyrinux/push2talk"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
directories-next = "2.0.0"
env_logger = "0.10.0"
fs2 = "0.4.3"
input = "0.8.3"
itertools = "0.11.0"
libc = "0.2.149"
log = "0.4.20"
signal-hook = "0.3.17"
strum = "0.25.0"
strum_macros = "0.25.3"
xkbcommon = "0.7.0"
libpulse-binding = "2.0"
nix = { version = "0.29", features = ["signal", "process"] }
procfs = "0.16.0"
